fixed overflow

--- a/main/directory/directory.css
+++ b/main/directory/directory.css
@@ -117,6 +117,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.7);
+    overflow-y: auto;
 }
 
 .modal-content {
